--- a/Week 04/inclass/number-adder/src/App.css
+++ b/Week 04/inclass/number-adder/src/App.css
@@ -1,19 +1,26 @@
 h1 {
   color: black;
   margin: 50px;
-  font: 2.5rem "Fira Sans", sans-serif;
+  font:
+    2.5rem 'Fira Sans',
+    sans-serif;
   font-weight: bolder;
 }
 
 h2 {
   margin: 20px;
   flex-direction: column;
-  font: 1rem "Fira Sans", sans-serif;
+  font:
+    1rem 'Fira Sans',
+    sans-serif;
   font-weight: book;
 }
 
-h3, h4 {
-  font: 1.5rem "Fira Sans", sans-serif;
+h3,
+h4 {
+  font:
+    1.5rem 'Fira Sans',
+    sans-serif;
   font-weight: 600;
 }
 
@@ -22,23 +29,22 @@ body {
 }
 
 button {
-    padding: 20px 20px;
-    font-size: 1em;
-    cursor: pointer;
-    background-color: #FFA500;
-    color: white;
-    border: none;
-    border-radius: 15px;
+  padding: 20px 20px;
+  font-size: 1em;
+  cursor: pointer;
+  background-color: #ffa500;
+  color: white;
+  border: none;
+  border-radius: 15px;
 }
 
 button:hover {
-    background-color: #FF8C00;
+  background-color: #ff8c00;
 }
 
 button:active {
-    transform: scale(0.98);
+  transform: scale(0.98);
 }
-
 
 /* ID uses a "#" */
 #navbar {
@@ -54,62 +60,61 @@ button:active {
 }
 
 #sidebar {
-    width: 400px;
-    background-color: #00539CFF;
-    color: white;
-    padding: 20px;
-    text-align: center;
+  width: 400px;
+  background-color: #00539cff;
+  color: white;
+  padding: 20px;
+  text-align: center;
 }
 
 #historyList:hover {
   cursor: pointer;
 }
 
-#resultId{
+#resultId {
   font-size: 3em;
 }
 
 #content {
   background-color: #f4f4f4;
-    width: 100%;
-    padding: 20px;
+  width: 100%;
+  padding: 20px;
 }
 
 #content h3 {
-    font-size: 1.5em;
-    margin-bottom: 20px;
+  font-size: 1.5em;
+  margin-bottom: 20px;
 }
 
 #clearAll {
-    padding: 20px 365px;
-    margin: 30px 0px;
-    font-size: 1em;
-    cursor: pointer;
-    background-color: #de266c;
-    color: white;
-    border: none;
-    border-radius: 15px;
+  padding: 20px 365px;
+  margin: 30px 0px;
+  font-size: 1em;
+  cursor: pointer;
+  background-color: #de266c;
+  color: white;
+  border: none;
+  border-radius: 15px;
 }
 
 /* class uses a dot "." */
 
-
 .buttons-container {
-    display: flex;
-    gap: 10px;
+  display: flex;
+  gap: 10px;
 }
 
 @media (max-width: 900px) {
-    #navbar{
-      height: 180px;
+  #navbar {
+    height: 180px;
     display: block;
     text-align: center;
-    }
+  }
 
-  #main-content{
+  #main-content {
     display: inline-grid;
-        height: fit-content;
-        text-align: center;
+    height: fit-content;
+    text-align: center;
   }
 
   #sidebar {
@@ -122,9 +127,8 @@ button:active {
     margin: 0px;
   }
 
-  .useless-container{
+  .useless-container {
     display: inline-flex;
     align-items: center;
   }
-
 }
